--- a/app/src/main/res/layout/textrecognition.xml
+++ b/app/src/main/res/layout/textrecognition.xml
@@ -8,33 +8,42 @@
     tools:context=".TextRecognition">
 
     <SurfaceView
+        android:layout_alignParentTop="true"
         android:id="@+id/sv_textrecognition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <SurfaceView
+        android:layout_alignParentTop="true"
+        android:id="@+id/sv_transparentview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <View
         android:id="@+id/view_bottom"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:background="#000000"
+        android:background="@color/bottomBar"
         android:alpha="0.75"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
+
+    <Button
+        android:id="@+id/captureButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_centerInParent="true"
         android:layout_alignTop="@+id/view_bottom"
-        android:layout_marginTop="0dp"
-        android:text="@string/textRecognition_text"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:textSize="13sp"/>
+        android:layout_marginTop="-80dp"
+        android:background="@drawable/roundedbutton" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_centerInParent="true"
         android:layout_alignTop="@+id/view_bottom"
         android:layout_marginTop="20dp"
-        android:text="@string/barcode_text" />
-
+        android:background="@drawable/roundedbutton"
+        android:textColor="@color/textColorPrimary"
+        android:text="@string/barcode_text"/>
 </RelativeLayout>
