--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -3,24 +3,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
-            <corners android:bottomRightRadius="180dip"
-                android:bottomLeftRadius="180dip"
-                android:topRightRadius="180dip"
-                android:topLeftRadius="180dip"/>
-            <stroke android:width="3dp"
-                android:color="@color/colorPrimaryDark" />
+            <solid android:color="@color/colorPrimaryPressed" />
+            <corners android:radius="180dip"/>
+            <stroke android:width="3dp" android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimary" />
-            <corners android:bottomRightRadius="180dip"
-                android:bottomLeftRadius="180dip"
-                android:topRightRadius="180dip"
-                android:topLeftRadius="180dip"/>
-            <stroke android:width="3dp"
-                android:color="@color/colorPrimaryDark" />
+            <corners android:radius="180dip"/>
+            <stroke android:width="3dp" android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 </selector>
