--- a/app/src/main/res/layout/barcode.xml
+++ b/app/src/main/res/layout/barcode.xml
@@ -21,23 +21,16 @@
         android:alpha="0.75"/>
 
     <Button
-        android:id="@+id/captureButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_centerInParent="true"
-        android:layout_alignTop="@+id/view_bottom"
-        android:layout_marginTop="-80dp"
-        android:background="@drawable/roundedbutton" />
-
-    <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_centerInParent="true"
         android:layout_alignTop="@+id/view_bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/roundedbutton"
-        android:textColor="@color/textColorPrimary"
-        android:text="@string/textRecognition_text" />
+        android:text="@string/textRecognition_text"
+        android:textColor="@color/textColorPrimary" />
 
 </RelativeLayout>
