--- a/app/src/main/res/layout/textrecognition.xml
+++ b/app/src/main/res/layout/textrecognition.xml
@@ -19,6 +19,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/detectedText"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:layout_centerInParent="true"
+        android:layout_alignTop="@+id/view_bottom"
+        android:layout_marginTop="-80dp"
+        android:layout_marginBottom="20dp"/>
+
     <View
         android:id="@+id/view_bottom"
         android:layout_width="match_parent"
@@ -28,22 +39,15 @@
         android:alpha="0.75"/>
 
     <Button
-        android:id="@+id/captureButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_centerInParent="true"
-        android:layout_alignTop="@+id/view_bottom"
-        android:layout_marginTop="-80dp"
-        android:background="@drawable/roundedbutton" />
-
-    <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_centerInParent="true"
         android:layout_alignTop="@+id/view_bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/roundedbutton"
-        android:textColor="@color/textColorPrimary"
-        android:text="@string/barcode_text"/>
+        android:text="@string/barcode_text"
+        android:textColor="@color/textColorPrimary" />
 </RelativeLayout>
